--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,12 @@ jobs:
         key: ${{ secrets.VPS_SSH_KEY }}
         port: ${{ secrets.VPS_PORT }}
         script: |
+          # Stop existing containers first
+          if [ -d "/var/www/ride-sharing-app" ]; then
+            cd /var/www/ride-sharing-app
+            sudo docker-compose down || true
+          fi
+          
           # Check if directory exists and handle accordingly
           if [ -d "/var/www/ride-sharing-app" ]; then
             echo "📁 Directory /var/www/ride-sharing-app exists"
@@ -40,8 +46,9 @@ jobs:
             echo "📁 Creating new directory and cloning repository..."
             sudo mkdir -p /var/www/ride-sharing-app
             sudo chown $USER:$USER /var/www/ride-sharing-app
-            cd /var/www/ride-sharing-app
-            git clone https://github.com/${{ github.repository }}.git .
+            cd /var/www/
+            git clone https://github.com/${{ github.repository }}.git ride-sharing-app
+            cd ride-sharing-app
           fi
           
           # Create .env file from secrets
@@ -64,49 +71,70 @@ jobs:
           ORS_API_KEY=${{ secrets.ORS_API_KEY }}
           EOF
           
-          # Stop existing containers (if any)
-          sudo docker-compose down || true
+          # Clean up Docker resources to ensure fresh build
+          echo "🧹 Cleaning up Docker resources..."
+          sudo docker-compose down --rmi all --volumes --remove-orphans || true
+          sudo docker system prune -f || true
           
-          # Remove any existing images to force rebuild
-          sudo docker-compose down --rmi all || true
-          
-          # Build and start services using existing docker-compose.yml
-          sudo docker-compose up -d --build
+          # Build and start services
+          echo "🔨 Building and starting services..."
+          sudo docker-compose up -d --build --force-recreate
           
           # Wait for services to be ready
-          echo "Waiting for services to be ready..."
-          sleep 30
+          echo "⏳ Waiting for services to be ready..."
+          sleep 60
+          
+          # Check service status
+          echo "=== Service Status ==="
+          sudo docker-compose ps
+          
+          # Show build logs if app failed to start
+          if ! sudo docker-compose ps | grep -q "app.*Up"; then
+            echo "=== App Build Logs ==="
+            sudo docker-compose logs app
+            exit 1
+          fi
           
           # Run database migrations if available
+          echo "🗃️  Running database migrations..."
           sudo docker-compose exec -T app npm run migration:run || echo "Migration command not available or failed"
           
           # Clean up unused Docker images
           sudo docker image prune -f
           
-          # Show service status
-          echo "=== Service Status ==="
-          sudo docker-compose ps
-          
-          # Show logs for troubleshooting
+          # Show recent logs
           echo "=== Recent App Logs ==="
           sudo docker-compose logs --tail 20 app
           
-          # Test application health
+          # Comprehensive health check
           echo "=== Health Check ==="
-          sleep 10
+          sleep 15
           
           # Check if all containers are running
           if sudo docker-compose ps | grep -q "app.*Up"; then
             echo "✅ App container is running"
             
-            # Test app endpoint
-            if curl -f http://localhost:3002/health > /dev/null 2>&1; then
-              echo "✅ Application health check passed"
-            else
-              echo "⚠️ Application not responding yet (may need more time)"
+            # Test app endpoint with retries
+            for i in {1..5}; do
+              if curl -f http://localhost:3002/health > /dev/null 2>&1; then
+                echo "✅ Application health check passed"
+                break
+              else
+                echo "⏳ Attempt $i: Application not responding yet, waiting..."
+                sleep 10
+              fi
+            done
+            
+            # Final health check
+            if ! curl -f http://localhost:3002/health > /dev/null 2>&1; then
+              echo "❌ Application failed final health check"
+              sudo docker-compose logs --tail 50 app
+              exit 1
             fi
           else
             echo "❌ App container is not running"
+            sudo docker-compose logs app
+            exit 1
           fi
           
           # Check database and redis
