--- a/.env.production
+++ b/.env.production
@@ -28,3 +28,4 @@ PORT=3000
 # GOOGLE_MAPS_API_KEY=...
 
 ORS_API_KEY=5b3ce3597851110001cf62483188b69e3a054a2bb886b43d94f3a268
+OPENROUTE_SERVICE_URL=https://api.openrouteservice.org
