--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "migration:revert": "npm run typeorm -- migration:revert -d ormconfig.ts",
     "migration:show": "npm run typeorm -- migration:show -d ormconfig.ts",
     "seed:run": "ts-node src/database/seeds/run-seed.ts",
-    "schema:drop": "npm run typeorm -- schema:drop -d ormconfig.ts"
+    "schema:drop": "npm run typeorm -- schema:drop -d ormconfig.ts",
+    "schema:sync": "npm run typeorm -- schema:sync -d ormconfig.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
